assets/css/style.css
/* ... */
#section_title_img0 {
    width: 100%;
}

#section_title_facts {
    display: flex;
    justify-content: space-evenly;
    background-color: black;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

#section_title_header {
    position: absolute;
    top: 120px;
    left: 50%;
    transform: translate(-50%, 0%);
    min-width: 300px;
    margin:0;
    background-color: rgba(36, 36, 36, 0.55);
    border-radius: 50%;
    padding:19px;
}

#section_facts_when {
    margin-right: 8px;
    margin-left: 10px;
    text-align: right;
}

#section_facts_where {
    margin-left: 8px;
    text-align: left;
}

#where,
#when {
    font-size: 0.75rem;
}

#section_video {
    background-color: black;
}

#section_gallery {
    display: grid;
    grid-template-columns: 2.3fr 1fr 1fr 2.3fr;
}

#section_gallery img {
    width: 100%;
    height: 100%;
}

#section_lineup {
    background: rgba(36, 36, 36, 0.55) url(../img/felix01.jpg);
    background-blend-mode: darken;
    background-size: cover;
    padding-bottom: 80px;
}

#section_lineup_starringdj {
    list-style-type: none;
    display: flex;
    justify-content: space-evenly;
    max-width: 700px;
    margin: 10px auto;
    text-shadow: 2px 2px 2px black;
}

#section_lineup_starringdj h4 {
    font-family: "Arial", sans-serif;
    color: rgb(255, 188, 45);
    margin: 5px auto;
}

#section_lineup_text {
    text-shadow: 3px 3px 4px #202020;
}

#section_gallery2 {
    position: relative;
}

#section_gallery2_pic1 {
    position: absolute;
    left: 22%;
    top: -38px;
    z-index: 2;
    width: 24%;
}

#section_gallery2_pic2 {
    position: absolute;
    right: 12%;
    top: 8vh;
    z-index: 2;
    width: 12%;
}

#section_gallery2 img {
    width: 100%;
    height: 100%;
    box-shadow: 2px 2px 5px gray;
}

#section_gallery2_container {
    display: grid;
    grid-template-columns: 2.1fr 1fr 2.1fr 1.2fr;
    z-index: 1;
}

#section_ticket {
    padding-top: 20px;
}

#section_ticket li {
    list-style-type: none;
}

#p1,
#p2,
#p3 {
    text-align: center;
    max-width: 380px;
}

#section_ticket_airports {
    display: flex;
    gap: 5px;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

#section_ticket_airports>li {
    text-align: center;
    flex-basis: 130px;
}

#section_ticket_sale {
    color: rgb(255, 188, 45);
    text-shadow: 1px 1px 2px #323232;
    margin-top: 15px;
}

#section_vip {

    background: rgba(0, 0, 0, 0.6) url(../img/festival10.jpg);
    background-blend-mode: darken;
    background-size: cover;
}

#section_vip_text {
    text-shadow: 2px 2px 3px #202020;
}

#section_vip_register_link {
    padding: 12px 20px;
    border: 1px solid rgb(255, 188, 45);
    border-radius: 5px;
    background-color: rgb(255, 188, 45);
    color: black;
    box-shadow: 2px 2px 4px #202020;
    text-decoration: none;
    font-family: "Ubuntu", sans-serif;
}

#section_stay_tuned {
    background-color: #000000;
}

#section_stay_tuned_card {
    background-color: rgb(255, 188, 45);
    border: none;
    border-radius: 8px;
    padding: 5px 22px;
    margin: 0 auto;
    text-align: left;
    max-width: 430px;
}

#section_stay_tuned_card h1 {
    color: black;
    text-shadow: none;
}

#section_stay_tuned_form {
    text-align: center;
    align-items: center;
}

#subscribe {
    padding: 5px 15px;
    background-color: black;
    color: rgb(255, 188, 45);
    font-family: "Ubuntu", sans-serif;
    border-radius: 5px;
    border: 1px solid black;
}

#section_faq {
    background: linear-gradient(#000000, #000000, #000000, #202020)
}

#section_faq_link {
    padding: 12px 45px;
    border: 1px solid rgb(255, 188, 45);
    border-radius: 5px;
    background-color: rgb(255, 188, 45);
    color: black;
    box-shadow: 2px 2px 4px #202020;
    text-decoration: none;
    font-family: "Ubuntu", sans-serif;
}


/* PAGE 2: faq.html specific ELEMENTS & STYLES ----------------- */

#faq_header {
    color: rgb(255, 188, 45);

}

#faq_section_tickets_header {
    margin: 60px 0;
}

details > summary {
    font-family: "Ubuntu", sans-serif;
    font-size: 1.2rem;
    color: white;;
    list-style-type: none;
    cursor: pointer;
    margin: 10px auto;
    margin-top: 20px;
    width: fit-content;
    max-width: 800px;
}

details > p {
    font-family: "Arial", sans-serif;
    color: #cbd5e3;
    margin: 10px auto;
    width: 70%;
    max-width: 800px;
    margin-bottom: 50px;
}

#faq_section_tickets_return {
    width: fit-content;
    margin: 0 auto;
    text-align: left;
    font-family: "Arial", sans-serif;
    color: #bdc6d2;
    margin-top: -30px;
    margin-bottom: 50px;
}

#register_airport_h {
    margin-top: 20px;
}


/* PAGE 3: preregister.html specific ELEMENTS & STYLES ----------------- */

#register_section_container {
    background-color: black;

}

#register_card {
    background-color: rgb(255, 188, 45);
    border: none;
    border-radius: 8px;
    padding: 5px 10px;
    margin: 0 auto;
    text-align: left;
    max-width: 800px;
}


#register_form_number {
    display: block;
    text-align: center;
    width: 180px;
}

#register_form_number_input {
    border-style: none;
    background-color: rgba(0, 0, 0, 0.2);
    padding: 7px;
    text-align: center;
    width: 80px;
    margin: 15px auto;
}

#register_airports {
    display: flex;
    gap: 5px;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

#register_airports>li {
    text-align: center;
    flex-basis: 130px;
}

#register_button_container {
    text-align: center;
}

#register_bt {
    padding: 5px 15px;
    background-color: black;
    color: rgb(255, 188, 45);
    font-family: "Ubuntu", sans-serif;
    border-radius: 5px;
    border: 1px solid black;
}

#register_bt:hover {
    color: black;
    background-color: rgb(255, 188, 45);
}

#register_form {
    margin: auto 10px;
}

.register_form_double_text {
    display: block;
}

.register_form_div_text {
    margin: 7px auto;
}
/* ... */

